Rework the test data generator as a Gradle task
Added support for shards, chunks now include all compression variants