@@ -7,7 +7,6 @@ import javax.crypto.spec.SecretKeySpec;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
@@ -18,19 +17,18 @@ import java.util.Base64;
 import java.util.Collections;
 import java.util.List;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @NullMarked
 public class TestChunks {
 
-    public static final Pattern compressedChunkPattern = Pattern.compile("Chunk-\\d+-\\d+\\.bin");
-    public static final Pattern decompressedChunkPattern = Pattern.compile("Chunk-\\d+-\\d+\\.decompressed.bin");
+    public static final Pattern shardFolderPattern = Pattern.compile("shard-\\d+");
+    public static final Pattern decompressedChunkPattern = Pattern.compile("chunk-\\d+\\.bin");
 
-    public static List<Chunk> get(Compression compression) {
-        final EncryptedTestData encryptedTestData = getEncryptedTestData(compression);
+    public static List<List<Chunk>> get() {
+        final EncryptedTestData encryptedTestData = getEncryptedTestData();
 
-        final List<Chunk> decryptedChunks = new ArrayList<>();
+        final List<List<Chunk>> decryptedShards = new ArrayList<>();
 
         try {
             final SecretKeySpec key = new SecretKeySpec(encryptedTestData.key, "AES");
@@ -40,44 +38,55 @@ public class TestChunks {
             final Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5Padding");
             cipher.init(Cipher.DECRYPT_MODE, key, parameters);
 
-            for (Chunk chunk : encryptedTestData.chunks) {
-                decryptedChunks.add(new Chunk(
-                        cipher.doFinal(chunk.compressed),
-                        cipher.doFinal(chunk.decompressed)
-                ));
+            for (List<Chunk> shard : encryptedTestData.shards) {
+                List<Chunk> decryptedChunks = new ArrayList<>();
+                for (Chunk chunk : shard) {
+                    decryptedChunks.add(new Chunk(
+                            cipher.doFinal(chunk.decompressed),
+                            cipher.doFinal(chunk.zlibCompressed),
+                            cipher.doFinal(chunk.zstdCompressed)
+                    ));
+                }
+                decryptedShards.add(decryptedChunks);
             }
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
 
-        return decryptedChunks;
+        return decryptedShards;
     }
 
-    private static EncryptedTestData getEncryptedTestData(Compression compression) {
+    private static EncryptedTestData getEncryptedTestData() {
         Path chunksDirectory = null;
         try {
-            chunksDirectory = getChunksDirectory(compression);
+            chunksDirectory = getChunksDirectory();
 
             Base64.Decoder b64decoder = Base64.getDecoder();
             byte[] key = b64decoder.decode(
-                    readEnvOrFile(compression.getKeyEnvVarName(), chunksDirectory.resolve("Key.bin"))
+                    readEnvOrFile("TEST_DATA_KEY", chunksDirectory.resolve("Key.bin"))
             );
             byte[] parameters = b64decoder.decode(
-                    readEnvOrFile(compression.getParametersEnvVarName(), chunksDirectory.resolve("Parameters.bin"))
+                    readEnvOrFile("TEST_DATA_PARAMETERS", chunksDirectory.resolve("Parameters.bin"))
             );
 
-            List<Chunk> chunks = new ArrayList<>();
-            try (Stream<Path> stream = Files.walk(chunksDirectory)) {
-                for (Path path : stream.filter(TestChunks::isCompressedChunk).sorted().collect(Collectors.toList())) {
-                    byte[] compressed = Files.readAllBytes(path);
-                    Path decompressedPath = path.resolveSibling(path.getFileName().toString().replace(".bin", "") + ".decompressed.bin");
-                    byte[] decompressed = Files.readAllBytes(decompressedPath);
+            List<List<Chunk>> shards = new ArrayList<>();
+            try (Stream<Path> shardDirStream = Files.walk(chunksDirectory, 1)) {
+                for (Path shardDir : shardDirStream.filter(TestChunks::isShardFolder).sorted().toList()) {
+                    List<Chunk> chunks = new ArrayList<>();
+                    try (Stream<Path> chunkStream = Files.walk(shardDir, 1)) {
+                        for (Path path : chunkStream.filter(TestChunks::isDecompressedChunk).sorted().toList()) {
+                            byte[] decompressed = Files.readAllBytes(path);
+                            byte[] zlibCompressed = Files.readAllBytes(path.resolveSibling(path.getFileName().toString() + ".zlib"));
+                            byte[] zstdCompressed = Files.readAllBytes(path.resolveSibling(path.getFileName().toString() + ".zstd"));
 
-                    chunks.add(new Chunk(compressed, decompressed));
+                            chunks.add(new Chunk(decompressed, zlibCompressed, zstdCompressed));
+                        }
+                    }
+                    shards.add(chunks);
                 }
             }
 
-            return new EncryptedTestData(key, parameters, chunks);
+            return new EncryptedTestData(key, parameters, shards);
         } catch (Exception e) {
             throw new RuntimeException(e);
         } finally {
@@ -97,18 +106,22 @@ public class TestChunks {
         if (envVar != null) return envVar;
 
         try {
-            return new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+            return Files.readString(path);
         } catch (IOException e) {
             throw new IOException("Env var '" + varName + "' is not present", e);
         }
     }
 
-    private static boolean isCompressedChunk(Path path) {
-        return compressedChunkPattern.matcher(path.getFileName().toString()).matches();
+    private static boolean isShardFolder(Path path) {
+        return shardFolderPattern.matcher(path.getFileName().toString()).matches();
     }
 
-    private static Path getChunksDirectory(Compression compression) throws URISyntaxException, IOException {
-        String resourcePath = compression.getResourcePath();
+    private static boolean isDecompressedChunk(Path path) {
+        return decompressedChunkPattern.matcher(path.getFileName().toString()).matches();
+    }
+
+    private static Path getChunksDirectory() throws URISyntaxException, IOException {
+        String resourcePath = "/chunks";
         URL resource = TestChunks.class.getResource(resourcePath);
         if (resource == null) {
             throw new AssertionError(String.format("No chunk directory was found at '%s'", resourcePath));
@@ -120,51 +133,9 @@ public class TestChunks {
         return fileSystem.getPath(resourcePath);
     }
 
-    public enum Compression {
-        ZLIB,
-        ZSTD,
-        ;
-
-        public String getResourcePath() {
-            return "/chunks-" + name().toLowerCase();
-        }
-
-        public String getKeyEnvVarName() {
-            return "TEST_DATA_" + name() + "_KEY";
-        }
-
-        public String getParametersEnvVarName() {
-            return "TEST_DATA_" + name() + "_PARAMETERS";
-        }
+    public record Chunk(byte[] decompressed, byte[] zlibCompressed, byte[] zstdCompressed) {
     }
 
-    public static class Chunk {
-        private final byte[] compressed;
-        private final byte[] decompressed;
-
-        private Chunk(byte[] compressed, byte[] decompressed) {
-            this.compressed = compressed;
-            this.decompressed = decompressed;
-        }
-
-        public byte[] getCompressed() {
-            return compressed;
-        }
-
-        public byte[] getDecompressed() {
-            return decompressed;
-        }
-    }
-
-    private static class EncryptedTestData {
-        private final byte[] key;
-        private final byte[] parameters;
-        private final List<Chunk> chunks;
-
-        private EncryptedTestData(byte[] key, byte[] parameters, List<Chunk> chunks) {
-            this.key = key;
-            this.parameters = parameters;
-            this.chunks = chunks;
-        }
+    private record EncryptedTestData(byte[] key, byte[] parameters, List<List<Chunk>> shards) {
     }
 }
